--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
         </div>
     
         <div class="row">
-    <button class="button" onclick="add_numero(7)">7</button>
-    <button class="button" onclick="add_numero(8)">8</button>
-    <button class="button" onclick="add_numero(9)">9</button>
-    <button class="button purple-text" onclick="limpar()">C</button>
+    <button class="button numeral" onclick="add_numero(7)">7</button>
+    <button class="button numeral" onclick="add_numero(8)">8</button>
+    <button class="button numeral" onclick="add_numero(9)">9</button>
+    <button class="button operacao" onclick="limpar()">c</button>
 </div>
 <div class="row">
-    <button class="button" onclick="add_numero(4)">4</button>
-    <button class="button" onclick="add_numero(5)">5</button>
-    <button class="button" onclick="add_numero(6)">6</button>
-    <button class="button red-text" onclick="add_operacao('/')">/</button>
+    <button class="button numeral" onclick="add_numero(4)">4</button>
+    <button class="button numeral" onclick="add_numero(5)">5</button>
+    <button class="button numeral" onclick="add_numero(6)">6</button>
+    <button class="button operacao" onclick="add_operacao('/')">/</button>
 </div>
 <div class="row">
-    <button class="button" onclick="add_numero(1)">1</button>
-    <button class="button" onclick="add_numero(2)">2</button>
-    <button class="button" onclick="add_numero(3)">3</button>
-    <button class="button white-text" onclick="add_operacao('*')">X</button>
+    <button class="button numeral" onclick="add_numero(1)">1</button>
+    <button class="button numeral" onclick="add_numero(2)">2</button>
+    <button class="button numeral" onclick="add_numero(3)">3</button>
+    <button class="button operacao" onclick="add_operacao('*')">x</button>
 </div>
 <div class="row">
-    <button class="button" onclick="add_numero(0)">0</button>
-    <button class="button brown-text" onclick="calcular()">=</button>
-    <button class="button grey-text" onclick="add_operacao('+')">+</button>
-    <button class="button green-text" onclick="add_operacao('-')">-</button>
+    <button class="button numeral" onclick="add_numero(0)">0</button>
+    <button class="button operacao" onclick="calcular()">=</button>
+    <button class="button operacao" onclick="add_operacao('+')">+</button>
+    <button class="button operacao" onclick="add_operacao('-')">-</button>
 </div>
 
 
