--- a/index.html
+++ b/index.html
@@ -7,38 +7,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="calculator">
-        <div class="display">
-            <input id="display" value="0" disabled>
-             <h2 id="history"></h2>
+    <div class="container">
+        <div class="calculator">
+            <div class="display">
+                <input id="display" value="0" disabled>
+            </div>
+        
+            <div class="row">
+                <button class="button numeral" onclick="add_numero(7)">7</button>
+                <button class="button numeral" onclick="add_numero(8)">8</button>
+                <button class="button numeral" onclick="add_numero(9)">9</button>
+                <button class="button operacao" onclick="limpar()">C</button>
+            </div>
+            <div class="row">
+                <button class="button numeral" onclick="add_numero(4)">4</button>
+                <button class="button numeral" onclick="add_numero(5)">5</button>
+                <button class="button numeral" onclick="add_numero(6)">6</button>
+                <button class="button operacao" onclick="add_operacao('/')">/</button>
+            </div>
+            <div class="row">
+                <button class="button numeral" onclick="add_numero(1)">1</button>
+                <button class="button numeral" onclick="add_numero(2)">2</button>
+                <button class="button numeral" onclick="add_numero(3)">3</button>
+                <button class="button operacao" onclick="add_operacao('*')">x</button>
+            </div>
+            <div class="row">
+                <button class="button numeral" onclick="add_numero(0)">0</button>
+                <button class="button operacao" onclick="calcular()">=</button>
+                <button class="button operacao" onclick="add_operacao('+')">+</button>
+                <button class="button operacao" onclick="add_operacao('-')">-</button>
+            </div>
         </div>
-    
-        <div class="row">
-    <button class="button numeral" onclick="add_numero(7)">7</button>
-    <button class="button numeral" onclick="add_numero(8)">8</button>
-    <button class="button numeral" onclick="add_numero(9)">9</button>
-    <button class="button operacao" onclick="limpar()">c</button>
-</div>
-<div class="row">
-    <button class="button numeral" onclick="add_numero(4)">4</button>
-    <button class="button numeral" onclick="add_numero(5)">5</button>
-    <button class="button numeral" onclick="add_numero(6)">6</button>
-    <button class="button operacao" onclick="add_operacao('/')">/</button>
-</div>
-<div class="row">
-    <button class="button numeral" onclick="add_numero(1)">1</button>
-    <button class="button numeral" onclick="add_numero(2)">2</button>
-    <button class="button numeral" onclick="add_numero(3)">3</button>
-    <button class="button operacao" onclick="add_operacao('*')">x</button>
-</div>
-<div class="row">
-    <button class="button numeral" onclick="add_numero(0)">0</button>
-    <button class="button operacao" onclick="calcular()">=</button>
-    <button class="button operacao" onclick="add_operacao('+')">+</button>
-    <button class="button operacao" onclick="add_operacao('-')">-</button>
-</div>
 
-
+        <div id="historico">
+            <table id="historicoTabela">
+                <tbody></tbody>
+            </table>
+        </div>
     </div>
 
     <script src="script.js"></script>
